compiler/test-data/parser/errors/expressions/unclosed_paren.frel
module test

blueprint Bad {
    x : i32 = (1 + 2
}
